--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <!-- title -->
-    <title>leHienPham Portfolio Website</title>
+    <title>leHienPham</title>
   </head>
   <body>
     <div id="root"></div>
